# serializer version: 1
# name: test_parse_vtt_file[cues]
  list([
    dict({
      'end_time': 3.0,
      'id': '84ec6681-574b-4570-aecb-5bcaea9415a9',
      'rating': 1,
      'speaker_name': 'Alice',
      'start_time': 0.0,
      'text': 'The birch canoe slid on the smooth planks.',
    }),
    dict({
      'end_time': 7.0,
      'id': 'ead5dd22-5dd3-4d27-8cc8-c09df813a71c',
      'rating': 2,
      'speaker_name': None,
      'start_time': 3.944,
      'text': 'Glue the sheet to the dark blue background.',
    }),
    dict({
      'end_time': 20.0,
      'id': 'db8f6b03-f1a0-426b-80bd-6d39382e8417',
      'rating': 4,
      'speaker_name': 'Bob',
      'start_time': 16.243,
      'text': 'The juice of lemons makes fine punch.',
    }),
    dict({
      'end_time': 33.0,
      'id': '18a4869f-8cab-4bb5-ba5b-f55900d26076',
      'rating': 3,
      'speaker_name': None,
      'start_time': 30.0,
      'text': 'A large size of stockings is hard to sell.',
    }),
  ])
# ---
# name: test_parse_vtt_file[metadata]
  dict({
    'id': '6c3f5031-ee11-4e08-b512-523c1e9d836f',
    'media_file_path': 'OSR_us_000_0010_8k.wav',
  })
# ---
# name: test_parse_vtt_no_speakers
  list([
    dict({
      'end_time': 3.0,
      'id': '84ec6681-574b-4570-aecb-5bcaea9415a9',
      'rating': 1,
      'speaker_name': None,
      'start_time': 0.0,
      'text': 'The birch canoe slid on the smooth planks.',
    }),
    dict({
      'end_time': 7.0,
      'id': 'ead5dd22-5dd3-4d27-8cc8-c09df813a71c',
      'rating': 2,
      'speaker_name': None,
      'start_time': 3.944,
      'text': 'Glue the sheet to the dark blue background.',
    }),
    dict({
      'end_time': 20.0,
      'id': 'db8f6b03-f1a0-426b-80bd-6d39382e8417',
      'rating': 4,
      'speaker_name': None,
      'start_time': 16.243,
      'text': 'The juice of lemons makes fine punch.',
    }),
    dict({
      'end_time': 33.0,
      'id': '18a4869f-8cab-4bb5-ba5b-f55900d26076',
      'rating': 3,
      'speaker_name': None,
      'start_time': 30.0,
      'text': 'A large size of stockings is hard to sell.',
    }),
  ])
# ---
# name: test_serialize_vtt
  '''
  WEBVTT
  
  NOTE CAPTION_EDITOR:TranscriptMetadata {"id": "6c3f5031-ee11-4e08-b512-523c1e9d836f", "mediaFilePath": "OSR_us_000_0010_8k.wav"}
  
  
  NOTE CAPTION_EDITOR:TranscriptSegment {"id": "84ec6681-574b-4570-aecb-5bcaea9415a9", "startTime": 0.0, "endTime": 3.0, "text": "The birch canoe slid on the smooth planks.", "speakerName": "Alice", "rating": 1, "timestamp": "2025-11-08T03:02:57.200-08:00"}
  
  84ec6681-574b-4570-aecb-5bcaea9415a9
  00:00:00.000 --> 00:00:03.000
  The birch canoe slid on the smooth planks.
  
  
  NOTE CAPTION_EDITOR:TranscriptSegment {"id": "ead5dd22-5dd3-4d27-8cc8-c09df813a71c", "startTime": 3.944, "endTime": 7.0, "text": "Glue the sheet to the dark blue background.", "rating": 2, "timestamp": "2025-11-08T03:03:03.807-08:00"}
  
  ead5dd22-5dd3-4d27-8cc8-c09df813a71c
  00:00:03.944 --> 00:00:07.000
  Glue the sheet to the dark blue background.
  
  
  NOTE CAPTION_EDITOR:TranscriptSegment {"id": "db8f6b03-f1a0-426b-80bd-6d39382e8417", "startTime": 16.243, "endTime": 20.0, "text": "The juice of lemons makes fine punch.", "speakerName": "Bob", "rating": 4, "timestamp": "2025-11-08T03:03:04.974-08:00"}
  
  db8f6b03-f1a0-426b-80bd-6d39382e8417
  00:00:16.243 --> 00:00:20.000
  The juice of lemons makes fine punch.
  
  
  NOTE CAPTION_EDITOR:TranscriptSegment {"id": "18a4869f-8cab-4bb5-ba5b-f55900d26076", "startTime": 30.0, "endTime": 33.0, "text": "A large size of stockings is hard to sell.", "rating": 3, "timestamp": "2025-11-08T03:03:06.412-08:00"}
  
  18a4869f-8cab-4bb5-ba5b-f55900d26076
  00:00:30.000 --> 00:00:33.000
  A large size of stockings is hard to sell.
  
  '''
# ---
